Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ stages:
         steps:
           - task: SonarQubePrepare@5
             inputs:
-              SonarQube: 'Azure-pz-sc'
+              SonarQube: 'Azure-pz-sc-auth'
               scannerMode: 'CLI'
               configMode: 'manual'
               cliProjectKey: 'Azure-pz-test'
