--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,12 +14,12 @@ stages:
         steps:
           - task: SonarQubePrepare@5
             inputs:
-              SonarQube: 'Azure-pz-sc-auth'
-              scannerMode: 'CLI'
-              configMode: 'manual'
-              cliProjectKey: 'Azure-pz-test'
-              cliProjectName: 'Azure-pz-test'
-              cliSources: '.'
+             SonarQube: 'Sonarqube-test'
+             scannerMode: 'CLI'
+             configMode: 'manual'
+             cliProjectKey: 'Azure-pz-dev'
+             cliProjectName: 'Azure-pz-dev'
+             cliSources: '.'
 
           - task: SonarQubeAnalyze@5
             inputs:
