--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,6 @@ pool:
   vmImage: ubuntu-22.04
 
 stages:
-
   - stage: Code_Quality_Test 
     displayName: 'Code Quality Test'
     jobs:
@@ -14,7 +13,7 @@ stages:
         steps:
           - task: SonarQubePrepare@5
             inputs:
-              SonarQube: 'Azure-pz-sc-auth'
+              SonarQube: 'Azure-pz-sc'
               scannerMode: 'CLI'
               configMode: 'manual'
               cliProjectKey: 'Azure-pz-dev'
@@ -22,7 +21,7 @@ stages:
               extraProperties: |
                 sonar.sources=.
                 sonar.login=admin
-                sonar.token=sqp_09c8aac320c2e6b8c19f50c665c318eed39cb603
+                sonar.password=q4am47G#RxJ#
 
           - task: SonarQubeAnalyze@5
             inputs:
@@ -32,12 +31,3 @@ stages:
             inputs:
               pollingTimeoutSec: '300'
             displayName: 'Publish SonarQube Analysis'
-
-# - task: SonarQubePrepare@5
-#   inputs:
-#     SonarQube: 'Azure-pz-sc'
-#     scannerMode: 'CLI'
-#     configMode: 'manual'
-#     cliProjectKey: 'Azure-pz-test'
-#     cliProjectName: 'Azure-pz-test'
-#     cliSources: '.'
