--- a/.github /workflows/liquibase.yml
+++ b/.github /workflows/liquibase.yml
@@ -1,4 +1,5 @@
-name: icanio-10094
+
+name: Run React App with PM2
 
 on:
   push:
@@ -7,18 +8,23 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: self-hosted # Use the appropriate label for your self-hosted runner
+
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v2
+        
+      - name: Change Directory to React App
+        run: cd /home/icanio-10094/propertyzar/env/liquibase
+        
+      - name: Pull Latest Changes
+        run: git pull
+        
+      - name: Install Dependencies
+        run: liquibase update --changelog-file=Changelog.sql
 
-      - name: Run Liquibase
-        run: |
-          cd /home/icanio-10094/propertyzar/env/liquibase
-          liquibase update --changelog-file=Changelog.sql
-          liquibase tag --tag $(TZ=Asia/Kolkata date "+%Y.%m.%d-%H.%M.%S")
+      - name: Delete Existing PM2 Process
+        run: liquibase tag --tag $(TZ=Asia/Kolkata date "+%Y.%m.%d-%H.%M.%S")
 
 
-
-      # Add your build and deployment steps here
 
