--- a/liquibase.properties
+++ b/liquibase.properties
@@ -1,6 +1,5 @@
 driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-url=jdbc:sqlserver://4.154.7.157;databaseName=pz-liquibase;encrypt=true;trustServerCertificate=true;
-username=icanio_dev
-password=jzrX72Gg$97CL6RB^PpH!
-changelogFile=changelog.sql
+url=jdbc:sqlserver://localhost;databaseName=liquibase;encrypt=true;trustServerCertificate=Ctrue;
+username=sa
+password=Kishor@123
 
