--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
           time=$(TZ=Asia/Kolkata date "+%Y.%m.%d-%H.%M.%S")
           cd /home/icanio-10094/propertyzar/env/liquibase
           git stash &&git pull 
-          liquibase update --changelog-file=$current_file_content
-          liquibase tag --tag $time
+          echo "liquibase update --changelog-file=$current_file_content"
+          # liquibase tag --tag $time
