--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
           time=$(TZ=Asia/Kolkata date "+%Y.%m.%d-%H.%M.%S")
           cd /home/icanio-10094/propertyzar/env/liquibase
           git stash &&git pull 
-          echo "liquibase update --changelog-file=$(git diff-tree --name-only HEAD | awk 'NR>1')"
+          liquibase update --changelog-file=$(git diff-tree --name-only HEAD | awk 'NR>1')
           liquibase tag --tag $time
